--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  ionicons: ^0.1.2
-  line_icons: ^2.0.1
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
